--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    <h1>Welcome to Stay Organized</h1>
+    <p>Your personal ToDo manager.</p>
+    <nav>
+        <a href="todo.html">View ToDos</a>
+        <a href="new_todo.html">Add New ToDo</a>
+    </nav>
+
     <script src="/scripts/app.js"></script>
 </body>
 </html>
