--- a/todo.html
+++ b/todo.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="/css/todo.css">
 </head>
 <body>
+    <h1>View ToDos</h1>
+    <label for="users">Select User:</label>
+    <select id="users">
+        <!-- User options will be populated here -->
+    </select>
+    <table id="todosTable">
+        <thead>
+            <tr>
+                <th>Description</th>
+                <th>Deadline</th>
+                <th>Priority</th>
+                <th>Completed</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- ToDos will be populated here -->
+        </tbody>
+    </table>
     
     <script src="/scripts/todo.js"></script>
 </body>
