added comments to JS
fixed the select category on add new todo page

--- a/todo.html
+++ b/todo.html
@@ -10,7 +10,7 @@
     <h1>View ToDos</h1>
     <label for="users">Select User:</label>
     <select id="users">
-        <!-- User options will be populated here -->
+        <!-- User options here -->
     </select>
     <table id="todosTable">
         <thead>
@@ -22,10 +22,10 @@
             </tr>
         </thead>
         <tbody>
-            <!-- ToDos will be populated here -->
+            <!-- ToDos here -->
         </tbody>
     </table>
-    
+
     <script src="/scripts/todo.js"></script>
 </body>
 </html>
